Fix nth-child, add width classes

--- a/index.html
+++ b/index.html
@@ -4,77 +4,78 @@
 	<meta charset="UTF-8">
 	<title>Css Weather Forecast</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/layout.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.5/css/weather-icons.min.css">
 	<link rel="icon" href="favicon.png">
 </head>
 <body>
-	<div class="wf-container">
-		<header class="wf-header">
+	<div class="ba-container">
+		<header class="ba-header">
 			<h1>CSS Weather Forecast <i class="wi wi-sunrise"></i></h1>
 		</header>
 
 		<main>
-			<ul class="wf-cities">
-				<li class="wf-city">
-					<h2 class="wf-city-name">Lisbon</h2>
-					<span class="wf-temperature">21</span>
+			<ul class="ba-cities">
+				<li class="ba-city-lisbon ba-width-1-2">
+					<h2 class="ba-city-name">Lisbon</h2>
+					<span class="ba-temperature">21</span>
 					<i class="wi wi-day-sunny"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Paris</h2>
-					<span class="wf-temperature">11</span>
+				<li class="ba-city-paris ba-width-1-4">
+					<h2 class="ba-city-name">Paris</h2>
+					<span class="ba-temperature">11</span>
 					<i class="wi wi-night-rain-mix"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Belgrade</h2>
-					<span class="wf-temperature">15</span>
+				<li class="ba-city-belgrade ba-width-1-4">
+					<h2 class="ba-city-name">Belgrade</h2>
+					<span class="ba-temperature">15</span>
 					<i class="wi wi wi-day-cloudy"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Moscow</h2>
-					<span class="wf-temperature">21</span>
+				<li class="ba-city-moscow ba-width-1-4">
+					<h2 class="ba-city-name">Moscow</h2>
+					<span class="ba-temperature">21</span>
 					<i class="wi wi wi-day-cloudy-high"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Tel Aviv</h2>
-					<span class="wf-temperature">32</span>
+				<li class="ba-city-tel-aviv ba-width-1-4">
+					<h2 class="ba-city-name">Tel Aviv</h2>
+					<span class="ba-temperature">32</span>
 					<i class="wi wi-hot"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Cair</h2>
-					<span class="wf-temperature">21</span>
+				<li class="ba-city-cair ba-width-1-4">
+					<h2 class="ba-city-name">Cair</h2>
+					<span class="ba-temperature">21</span>
 					<i class="wi wi-day-sunny"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">New York</h2>
-					<span class="wf-temperature">17</span>
+				<li class="ba-city-new-york ba-width-1-4">
+					<h2 class="ba-city-name">New York</h2>
+					<span class="ba-temperature">17</span>
 					<i class="wi wi-day-snow-thunderstorm"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">New Delhi</h2>
-					<span class="wf-temperature">17</span>
+				<li class="ba-city-new-delhi ba-width-1-4">
+					<h2 class="ba-city-name">New Delhi</h2>
+					<span class="ba-temperature">17</span>
 					<i class="wi wi-rain-wind"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">San Francisco</h2>
-					<span class="wf-temperature">15</span>
+				<li class="ba-city-san-francisco ba-width-1-2">
+					<h2 class="ba-city-name">San Francisco</h2>
+					<span class="ba-temperature">15</span>
 					<i class="wi wi-day-sunny-overcast"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Tokyo</h2>
-					<span class="wf-temperature">8</span>
+				<li class="ba-city-tokyo ba-width-1-4">
+					<h2 class="ba-city-name">Tokyo</h2>
+					<span class="ba-temperature">8</span>
 					<i class="wi wi-night-clear"></i>
 				</li>
-				<li class="wf-city">
-					<h2 class="wf-city-name">Sydney</h2>
-					<span class="wf-temperature">25</span>
+				<li class="ba-city-sydney">
+					<h2 class="ba-city-name">Sydney</h2>
+					<span class="ba-temperature">25</span>
 					<i class="wi wi-night-partly-cloudy"></i>
 				</li>
 			</ul>
 		</main>
 
-		<footer class="wf-footer">
+		<footer class="ba-footer">
 			<p>Have a nice day and don't forget umbrella if you are in New Delhi now!</p>
 		</footer>
 	</div>
